adding for linux transfer, added some documentation, added some to the scripts

--- a/software/src/omaha/util.html
+++ b/software/src/omaha/util.html
@@ -19,7 +19,7 @@
 		
 		<div id="short-nav">
 			<dl>
-			<dd><code>import "./util"</code></dd>
+			<dd><code>import "../../util"</code></dd>
 			</dl>
 			<dl>
 			<dd><a href="#pkg-overview" class="overviewLink">Overview</a></dd>
@@ -51,8 +51,6 @@
 			<div id="manual-nav">
 			<dl>
 			
-			
-				<dd><a href="#pkg-variables">Variables</a></dd>
 			
 			
 				
@@ -117,22 +115,10 @@
 
 		
 		
-			<h2 id="pkg-variables">Variables</h2>
-			
-				<pre>var <span id="Options">Options</span> <a href="/pkg/github.com/jacobsa/go-serial/serial/">serial</a>.<a href="/pkg/github.com/jacobsa/go-serial/serial/#OpenOptions">OpenOptions</a> = <a href="/pkg/github.com/jacobsa/go-serial/serial/">serial</a>.<a href="/pkg/github.com/jacobsa/go-serial/serial/#OpenOptions">OpenOptions</a>{
-    <a href="#PortName">PortName</a>:        &#34;/dev/ttyUSB0&#34;,
-    <a href="#BaudRate">BaudRate</a>:        9600,
-    <a href="#DataBits">DataBits</a>:        8,
-    <a href="#StopBits">StopBits</a>:        1,
-    <a href="#MinimumReadSize">MinimumReadSize</a>: 1,
-}</pre>
-				
-			
-		
 		
 			
 			
-			<h2 id="GetOmahaPath">func <a href="/src/target/util.go?s=311:337#L9">GetOmahaPath</a></h2>
+			<h2 id="GetOmahaPath">func <a href="/src/target/util.go?s=90:116#L1">GetOmahaPath</a></h2>
 			<pre>func GetOmahaPath() <a href="/pkg/builtin/#string">string</a></pre>
 			<p>
 GetOmahaPath returns the root of the Omaha application.
